# Text_mining

./: 01_teaching_demo.ipynb  LICENSE
Session2/: .reading_folders.zip.icloud
Session3/TA/: pyproject.toml
Session3/TA/data/: .cc_news_large.csv.icloud
Session3/TA/notebooks/: 01_teaching_demo.ipynb  02_exercise.ipynb
Session3/TA/scripts/: generate_synthetic_data.py
