[project]
name = "nlp-ta-massive-text"
version = "0.1.0"
description = "TA Session: Working with Massive Text Data - BSE Data Science Master"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "datasets>=2.18.0",      # For downloading CC-News from HuggingFace
    "tqdm>=4.66.0",          # Progress bars
    "psutil>=5.9.0",         # RAM monitoring for the exercise
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",     # For any quick visualizations
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.9",  # Only needed if students want to try Postgres locally
    "sqlalchemy>=2.0.0",
]

[tool.uv]
dev-dependencies = []
